add login with authorization, add compare JWT, add new migration
