# api/restapi/operations/post_users_login_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"main/internal/models"
+)
+
+// PostUsersLoginCreatedCode is the HTTP code returned for type PostUsersLoginCreated
+const PostUsersLoginCreatedCode int = 201
+
+/*
+PostUsersLoginCreated User logined
+
+swagger:response postUsersLoginCreated
+*/
+type PostUsersLoginCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewPostUsersLoginCreated creates PostUsersLoginCreated with default headers values
+func NewPostUsersLoginCreated() *PostUsersLoginCreated {
+
+	return &PostUsersLoginCreated{}
+}
+
+// WithPayload adds the payload to the post users login created response
+func (o *PostUsersLoginCreated) WithPayload(payload string) *PostUsersLoginCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post users login created response
+func (o *PostUsersLoginCreated) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostUsersLoginCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+/*
+PostUsersLoginDefault Общая ошибка
+
+swagger:response postUsersLoginDefault
+*/
+type PostUsersLoginDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewPostUsersLoginDefault creates PostUsersLoginDefault with default headers values
+func NewPostUsersLoginDefault(code int) *PostUsersLoginDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostUsersLoginDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post users login default response
+func (o *PostUsersLoginDefault) WithStatusCode(code int) *PostUsersLoginDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post users login default response
+func (o *PostUsersLoginDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the post users login default response
+func (o *PostUsersLoginDefault) WithPayload(payload *models.ErrorResponse) *PostUsersLoginDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post users login default response
+func (o *PostUsersLoginDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostUsersLoginDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
